--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -70,8 +70,9 @@
                     border-radius: 4px 0 0 4px;
                 }
                 .input-num {
-                    min-width: 110px;
+                    min-width: 116px;
                     border-radius: 0 4px 4px 0;
+                    text-align: start;
                 }
             }
         }
