--- a/src/assets/scss/_primary.scss
+++ b/src/assets/scss/_primary.scss
@@ -1,5 +1,9 @@
 /* CONSTANTS */
 
 @import "src/assets/css/colors";
+@import "src/assets/css/fonts";
+@import "src/assets/css/custom-theme";
 @import "src/assets/css/buttons";
+@import "src/assets/css/custom";
+@import "src/assets/css/palette";
 @import "layout/utils";
