--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -71,7 +71,7 @@
             </form>
         </div>
         <div class="content-chat">
-            <app-chat [formNav]="formNav" (emitChangeText)="changeText($event)" [dataResponseJson]=' dataResponseJson ' [showLoaderInit]='showLoaderInit ' [showheartIconRead]='showheartIconRead ' [resetText]='resetText ' (emitopenDialog)="openDialog()"></app-chat>
+            <app-chat [formNav]="formNav" (emitChangeText)="changeText($event)" [dataResponseJson]=' dataResponseJson ' [showLoaderInit]='showLoaderInit ' [showheartIconRead]='showheartIconRead ' [resetText]='resetText' [activeDownload]='activeDownload'></app-chat>
         </div>
     </div>
 </div>
