validacion de correcciones

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -93,6 +93,9 @@
         </footer>
     </form>
 </div>
+<div #headers id="title" style="margin-top: -3.25rem; margin-bottom: 1rem;">
+
+</div>
 <div id="download">
     <img #canvas />
     <a #downloadLink></a>
