--- a/src/app/dialog/login/login.component.html
+++ b/src/app/dialog/login/login.component.html
@@ -1,5 +1,13 @@
-<div class="form">
-    <div class="container">
+<div class="form hp-100">
+    <div class="b-primary-green content-img hp-100">
+        <p class="m-0 mt-32 ml-32 fts-25">AVIwatcher</p>
+        <div class="text-p mt-60 ">
+            <p class="fts-48 m-0"> Bienvenido </p>
+            <br>
+            <span class="fts-18"> al Gestor Integral de Reclamos y Pedidos Único.</span>
+        </div>
+    </div>
+    <div class="flex-class">
         <h2><b>Ingresar al sistema</b></h2>
         <span>Login</span>
         <!-- <form [formGroup]="form">
