--- a/src/assets/scss/layout/_utils.scss
+++ b/src/assets/scss/layout/_utils.scss
@@ -145,7 +145,7 @@ $spaceamounts: (-110, -76, -60, -50, -40, -20, -19, -18, -17, -15, -12, -10, -7,
 
 //Font
 $baseSp: 0.0624;
-$spaceamounts1: ( 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35);
+$spaceamounts1: ( 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48);
 @each $space1 in $spaceamounts1 {
     .fts-#{$space1} {
         font-size: #{$space1*$baseSp}em !important;
@@ -159,6 +159,11 @@ $spaceamounts1: ( 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19
 
 .w-space {
     white-space: nowrap;
+}
+
+//colores
+.b-primary-green {
+    background: #00bb31;
 }
 
 @-moz-keyframes spin {
