--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="ng-content flex-class">
     <div class="section-1">
         <div class="content-nav">
-            <div class="toolbar nav-section1 flex-class pl-16">
-                <div class="flex-class ai-center">
-                    <p class="m-0 fts-20 flex-class ai-center m-0"> <span>AVIwatcher</span></p>
-                    <div class="button-container ml-16 mr-16">
-                        <button mat-button (click)="restaurar()">RESTAURAR</button>
-                    </div>
+            <div class="toolbar nav-section1 jc-sb flex-class pl-16">
+                <!-- <div class="flex-class ai-center"> -->
+                <p class="m-0 fts-25 flex-class ai-center m-0"> <span>AVIwatcher</span></p>
+                <div class="button-container ml-16 mr-16 flex-class ai-center">
+                    <button mat-button (click)="restaurar()">RESTAURAR</button>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
