--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <footer class="content-msj flex-class pt-8 pb-8 pl-16 pr-16 vw-100 ai-center">
+        <footer class="content-msj jc-sa flex-class pt-8 pb-8 pl-16 pr-16 vw-100 ai-center">
             <mat-icon class="mr-16 icon">tag_faces</mat-icon>
             <mat-icon class="mr-16 icon">attach_file</mat-icon>
             <div class="input-text ta-s ai-center flex-class">
