--- a/src/assets/scss/layout/_utils.scss
+++ b/src/assets/scss/layout/_utils.scss
@@ -100,6 +100,10 @@ $spaceamounts: (-110, -76, -60, -50, -40, -20, -19, -18, -17, -15, -12, -10, -7,
     justify-content: space-between;
 }
 
+.jc-sa {
+    justify-content: space-around;
+}
+
 //Text align
 .ta-r {
     text-align: right;
