--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -99,3 +99,9 @@
     background-color: $primary-watermelon;
     color: $primary-white;
 }
+
+@media screen and (max-width: 900px) {
+    .section-2 {
+        width: auto !important;
+    }
+}
