correccion exportar excel

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,8 @@
             <form id="contactForm" [formGroup]="formNav" class="col-10 flex-class jc-sb ai-center toolbar ta-c nav-section2 pr-16">
                 <mat-radio-group>
                     <div class="section-checkbox flex-class ai-center fts-10">
-                        <mat-radio-button class=" ml-16 mr-12" value="1" (change)="setearValor(1)" [checked]="activeCheck === 1">WEB </mat-radio-button>
+                        <mat-radio-button class=" ml-16 mr-12" value="1" (change)="setearValor(1)" [checked]="activeCheck === 1">WEB
+                        </mat-radio-button>
                         <mat-radio-button value="2" (change)="setearValor(2)" [checked]="activeCheck === 2">APP</mat-radio-button>
                     </div>
                 </mat-radio-group>
